[package]
name = "wyag"
version = "0.1.0"
authors = ["Mark McCaskey"]
edition = "2018"
license = "Apache-2.0"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.7"
flate2 = { version = "1.0", features = ["zlib"], default-features = false }
log = "0.4"
rust-crypto = "0.2"
regex = "1.3"
rust-ini = "0.13"
structopt = "0.3"